<resources>
    <string name="app_name">Gamerbox</string>
    <string name="email_text">Correo electrónico</string>
    <string name="login_text">Iniciar sesión</string>
    <string name="password_text">Contraseña</string>
    <string name="register_text">Registrarse</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="continue_btn">Continuar</string>
    <string name="accept_text">Aceptar</string>
    <string name="welcome_text">¡Bienvenido!</string>
    <string name="username_text">Nombre de usuario</string>
    <string name="select_image">Selecciona una imagen</string>
    <string name="select_image_btn">Seleccionar imagen</string>
    <string name="confirm_text">Confirmar</string>
    <string name="popular_games">Populares</string>
    <string name="new_games">Recientes</string>
    <string name="hint_search_text">Buscar juegos…</string>
    <string name="metacritic_text">Metacritic</string>
    <string name="review_text">Reseña</string>
    <string name="reviews_text">Reseñas</string>
    <string name="review_user_text">Escribe aquí tu reseña</string>
    <string name="no_reviews_text">No hay reseñas, ¡por ahora!</string>
    <string name="like_review">Likes</string>
    <string name="add_favourite">Añadir a Favoritos</string>
    <string name="more_reviews_text">Más reseñas</string>
    <string name="favorite_games_text">Favoritos</string>
    <string name="edit_favorite_games">Tus Juegos Favoritos</string>
    <string name="edit_favorites_text">Editar Favoritos</string>
    <string name="password_limit_text">La contraseña debe tener al menos 6 caracteres</string>
    <string name="incorrect_email_header">¿Y ese correo?</string>
    <string name="incorrect_email_message">Por favor, introduce un correo electrónico válido.</string>
    <string name="auth_error">Se ha producido un error autenticando al usuario</string>
    <string name="empty_username_error">El nombre de usuario no puede estar vacío.</string>
    <string name="usermame_already_exists_error">El nombre de usuario ya existe.</string>
    <string name="user_already_exists_error">El usuario con ese correo ya existe</string>
    <string name="follow_text">Seguir</string>
    <string name="unfollow_text">Dejar de seguir</string>
    <string name="delete_review">Eliminar Reseña</string>
    <string name="edit_review">Editar Reseña</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="game_date_finish_text">¿Cuándo lo terminaste?</string>
</resources>