<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/gameDetailsImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:foreground="@drawable/gradient_image_bottom"
                android:scaleType="centerCrop"
                android:src="@drawable/game_image" />

            <ImageButton
                android:id="@+id/gameBackArrowImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_arrow_back"
                app:tint="@android:color/white" />

            <androidx.cardview.widget.CardView
                android:id="@+id/gameDetailsAdditionalImageViewCardView"
                android:layout_width="135dp"
                android:layout_height="210dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="190dp"
                android:layout_marginEnd="16dp"
                android:elevation="4dp"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:id="@+id/gameDetailsAdditionalImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/game_image" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/gameDetailsMetacriticTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gameDetailsAdditionalImageViewCardView"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="28dp"
                android:fontFamily="@font/montserratbold"
                android:padding="2dp"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/metacriticLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gameDetailsAdditionalImageViewCardView"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="60dp"
                android:fontFamily="@font/montserratregular"
                android:text="@string/metacritic_text"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/gameDetailsTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gameDetailsImageView"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_toStartOf="@id/gameDetailsAdditionalImageViewCardView"
                android:fontFamily="@font/montserratmedium"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gameDetailsDatetextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gameDetailsTitleTextView"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_toStartOf="@id/gameDetailsAdditionalImageViewCardView"
                android:fontFamily="@font/montserratregular"
                android:textSize="20sp" />

            <com.example.gamerbox.view.NestedScrollView
                android:id="@+id/descriptionScrollView"
                android:layout_width="229dp"
                android:layout_height="220dp"
                android:layout_below="@id/gameDetailsDatetextView"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="16dp"
                android:layout_toStartOf="@id/gameDetailsAdditionalImageViewCardView"
                android:background="#2E2C2C"
                android:fadeScrollbars="true">

                <TextView
                    android:id="@+id/gameDetailsDescriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratregular"
                    android:textSize="17sp" />
            </com.example.gamerbox.view.NestedScrollView>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviewsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gameDetailsDatetextView"
                android:layout_marginTop="300dp"
                tools:listitem="@layout/item_review" />

            <TextView
                android:id="@+id/noReviewsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gameDetailsDatetextView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="300dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/no_reviews_text"
                android:textSize="15sp"
                android:visibility="gone" />

            <!-- New Button for more reviews -->
            <Button
                android:id="@+id/moreReviewsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reviewsRecyclerView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:text="@string/more_reviews_text" />

        </RelativeLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/actionGameFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/blue"
        app:fabSize="auto"
        app:srcCompat="@drawable/ic_add_review" />

</RelativeLayout>
